# Science-of-Programming

./: .gitignore
t1_commandline/: book.txt  in - копия.txt  in.txt  main.c  resource.h  resource.rc  sl_text.c  sl_text.h
t2_dll/: CMakeLists.txt
t2_dll/Dll/: CMakeLists.txt  exp.def  main.cpp  writer.h
t2_dll/Dll/cpp/: writer.cpp
t2_dll/Exe/: CMakeLists.txt  main.cpp
textedit/: CMakeLists.txt  main.cpp  textedit.cpp  textedit.h
